[package]
name = "kbforge"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2"
usbd-hid = "0.5"

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dev-dependencies]
embedded-hal-mock = "0.7"
