[package]
name = "kbforge"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "A framework for USB keyboard firmwares"
repository = "https://github.com/agausmann/kbforge"
license = "BSD-1-Clause"
keywords = ["keyboard", "firmware", "usb"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Board selection
planck = ["atmega32u4-hal"]

[dependencies]
usb-device = "0.2"
usbd-hid = "0.5"

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.atmega32u4-hal]
git = "https://github.com/Rahix/avr-hal.git"
optional = true

[dev-dependencies]
embedded-hal-mock = "0.7"

