[package]
name = "polybius"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"
description = "A framework for USB keyboard firmwares"
repository = "https://github.com/agausmann/polybius"
license = "BSD-1-Clause"
keywords = ["keyboard", "firmware", "usb"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
usb = ["usb-device", "usbd-hid"]

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
fullhouse = "0.1"
lock_api = "0.4"
usb-device = { version = "0.2", optional = true }
usbd-hid = { version = "0.6", optional = true }
parking_lot = "0.12"

[target.'cfg(any(test, target_arch = "avr"))'.dependencies]
avr-device = "0.3"

[dev-dependencies]
embedded-hal-mock = "0.7"