[package]
publish = false
name = "soft-serial-rx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-device = "0.3.3"
avr-std-stub = "1.0"
embedded-hal = "0.2"
polybius = { path = "../../polybius", features = ["atmega32u4"] }

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal.git"
branch = "main"
features = ["atmega32u4", "rt"]